--- a/fontend/package.json
+++ b/fontend/package.json
@@ -15,10 +15,12 @@
     "axios": "^0.16.2",
     "babel-runtime": "^6.25.0",
     "dva": "^1.2.1",
+    "moment": "^2.18.1",
     "path-to-regexp": "^1.7.0",
     "rc-form": "^1.4.6",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
+    "react-lazyload": "^2.2.7",
     "url-parse": "^1.1.9"
   },
   "devDependencies": {
