--- a/goku-admin/package.json
+++ b/goku-admin/package.json
@@ -5,7 +5,7 @@
     "build": "roadhog build",
     "lint": "eslint --ext .js src test",
     "precommit": "npm run lint",
-    "test": "mocha --compilers js:babel-core/register --watch"
+    "test": "mocha --compilers js:babel-core/register --watch --recursive"
   },
   "engines": {
     "install-node": "6.9.2"
