--- a/goku-admin/package.json
+++ b/goku-admin/package.json
@@ -16,6 +16,7 @@
     "dva": "^1.2.1",
     "dva-loading": "^0.2.1",
     "moment": "^2.18.1",
+    "qrcode.react": "^0.7.1",
     "react": "^15.4.0",
     "react-dom": "^15.4.0"
   },
