--- a/node-server/package.json
+++ b/node-server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "forever start -c nodemon app.js"
   },
   "keywords": [],
   "author": "",
