--- a/node-server/package.json
+++ b/node-server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "crypto": "^1.0.1",
     "express": "^4.15.4",
     "nodemon": "^1.11.0",
     "request": "^2.81.0"
