--- a/supervisor.conf
+++ b/supervisor.conf
@@ -375,8 +375,8 @@ autorestart=true
 
 
 [program:web]
-command=node web.js
-directory=/root/project/GOKU/goku-admin
+command=npm start
+directory=/root/project/GOKU/node-server
 process_name=%(program_name)s ; process_name expr (default %(program_name)s)
 numprocs=1          ; number of processes copies to start (def 1)
 stopsignal=QUIT        ; signal used to kill process (default TERM)
