--- a/fontend/package.json
+++ b/fontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.16.2",
     "babel-runtime": "^6.25.0",
     "dva": "^1.2.1",
+    "jssha": "^2.3.1",
     "moment": "^2.18.1",
     "path-to-regexp": "^1.7.0",
     "rc-form": "^1.4.6",
